social icon spacing fix in backend

--- a/assets/styles/custom-editor-style.scss
+++ b/assets/styles/custom-editor-style.scss
@@ -480,10 +480,6 @@ html :where(.editor-styles-wrapper) kbd {
 }
 
 /* social link block */
-.editor-styles-wrapper .wp-block-social-links li {
-	margin: 0px 6px 0px 0px;
-}
-
 .editor-styles-wrapper .wp-block-social-links li:last-child {
 	margin-right: 0px;
 }
